// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAPIParser > 标签解析功能测试 > 应该解析包含@link引用的Zod schema的JSDoc注释 1`] = `
{
  "components": {
    "schemas": {
      "UpdateUserProfileDto": {
        "$schema": "https://json-schema.org/draft/2020-12/schema",
        "additionalProperties": false,
        "properties": {
          "avatar": {
            "description": "头像URL",
            "examples": [
              "https://cdn.example.com/avatars/user123.jpg",
            ],
            "format": "uri",
            "type": "string",
          },
          "displayName": {
            "description": "用户显示名称",
            "examples": [
              "John Doe",
            ],
            "maxLength": 50,
            "minLength": 2,
            "type": "string",
          },
          "email": {
            "description": "用户邮箱地址",
            "examples": [
              "john.doe@example.com",
            ],
            "format": "email",
            "pattern": "^(?!\\.)(?!.*\\.\\.)([A-Za-z0-9_'+\\-\\.]*)[A-Za-z0-9_+-]@([A-Za-z0-9][A-Za-z0-9\\-]*\\.)+[A-Za-z]{2,}$",
            "type": "string",
          },
        },
        "required": [
          "email",
        ],
        "type": "object",
      },
      "UpdateUserProfileVo": {
        "$schema": "https://json-schema.org/draft/2020-12/schema",
        "additionalProperties": false,
        "properties": {
          "data": {
            "additionalProperties": false,
            "description": "返回数据",
            "properties": {
              "userId": {
                "description": "用户ID",
                "examples": [
                  "123e4567-e89b-12d3-a456-426614174000",
                ],
                "format": "uuid",
                "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000)$",
                "type": "string",
              },
            },
            "required": [
              "userId",
            ],
            "type": "object",
          },
          "success": {
            "description": "是否成功",
            "examples": [
              true,
            ],
            "type": "boolean",
          },
        },
        "required": [
          "success",
          "data",
        ],
        "type": "object",
      },
      "UserNotFoundVo": {
        "$schema": "https://json-schema.org/draft/2020-12/schema",
        "additionalProperties": false,
        "properties": {
          "error": {
            "additionalProperties": false,
            "properties": {
              "code": {
                "description": "错误码",
                "examples": [
                  "USER_NOT_FOUND",
                ],
                "type": "string",
              },
              "message": {
                "description": "错误消息",
                "examples": [
                  "指定的用户不存在",
                ],
                "type": "string",
              },
            },
            "required": [
              "code",
              "message",
            ],
            "type": "object",
          },
          "success": {
            "description": "是否成功",
            "examples": [
              false,
            ],
            "type": "boolean",
          },
        },
        "required": [
          "success",
          "error",
        ],
        "type": "object",
      },
    },
  },
  "info": {
    "title": "",
    "version": "1.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/api/v1/users/{userId}/profile": {
      "put": {
        "deprecated": true,
        "description": "更新指定用户的个人档案信息，包括基本信息和偏好设置。支持部分更新，只更新提供的字段。",
        "operationId": "updateUserProfile",
        "parameters": [
          {
            "description": "用户唯一标识符",
            "example": "123e4567-e89b-12d3-a456-426614174000",
            "in": "path",
            "name": "userId",
            "required": true,
            "schema": {
              "format": "uuid",
              "type": "string",
            },
          },
        ],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/UpdateUserProfileDto",
              },
            },
          },
          "description": "用户档案更新数据",
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/UpdateUserProfileVo",
                },
              },
            },
            "description": "用户档案更新成功",
          },
          "404": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/UserNotFoundVo",
                },
              },
            },
            "description": "用户不存在",
          },
        },
        "summary": "更新用户档案信息",
        "tags": [
          "users",
          "profile",
        ],
      },
    },
  },
  "tags": [
    {
      "name": "users",
    },
    {
      "name": "profile",
    },
  ],
}
`;

exports[`OpenAPIParser > 标签解析功能测试 > 应该解析包含JSON Schema的JSDoc注释 1`] = `
{
  "info": {
    "title": "",
    "version": "1.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/api/v1/users/{userId}/profile": {
      "put": {
        "deprecated": true,
        "description": "更新指定用户的个人档案信息，包括基本信息和偏好设置。支持部分更新，只更新提供的字段。",
        "operationId": "updateUserProfile",
        "parameters": [
          {
            "description": "用户唯一标识符",
            "example": "123e4567-e89b-12d3-a456-426614174000",
            "in": "path",
            "name": "userId",
            "required": true,
            "schema": {
              "format": "uuid",
              "type": "string",
            },
          },
        ],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "avatar": {
                    "description": "头像URL",
                    "examples": [
                      "https://cdn.example.com/avatars/user123.jpg",
                    ],
                    "format": "uri",
                    "type": "string",
                  },
                  "displayName": {
                    "description": "用户显示名称",
                    "examples": [
                      "John Doe",
                    ],
                    "maxLength": 50,
                    "minLength": 2,
                    "type": "string",
                  },
                  "email": {
                    "description": "用户邮箱地址",
                    "examples": [
                      "john.doe@example.com",
                    ],
                    "format": "email",
                    "type": "string",
                  },
                },
                "required": [
                  "email",
                ],
                "type": "object",
              },
            },
          },
          "description": "用户档案更新数据",
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "data": {
                      "description": "返回数据",
                      "properties": {
                        "userId": {
                          "description": "用户ID",
                          "examples": [
                            "123e4567-e89b-12d3-a456-426614174000",
                          ],
                          "format": "uuid",
                          "type": "string",
                        },
                      },
                      "type": "object",
                    },
                    "success": {
                      "description": "是否成功",
                      "examples": [
                        true,
                      ],
                      "type": "boolean",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "用户档案更新成功",
          },
          "404": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "error": {
                      "properties": {
                        "code": {
                          "description": "错误码",
                          "examples": [
                            "USER_NOT_FOUND",
                          ],
                          "type": "string",
                        },
                        "message": {
                          "description": "错误消息",
                          "examples": [
                            "指定的用户不存在",
                          ],
                          "type": "string",
                        },
                      },
                      "type": "object",
                    },
                    "success": {
                      "description": "是否成功",
                      "examples": [
                        false,
                      ],
                      "type": "boolean",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "用户不存在",
          },
        },
        "summary": "更新用户档案信息",
        "tags": [
          "users",
          "profile",
        ],
      },
    },
  },
  "tags": [
    {
      "name": "users",
    },
    {
      "name": "profile",
    },
  ],
}
`;

exports[`OpenAPIParser > 标签解析功能测试 > 应该解析包含内联schema的JSDoc注释 1`] = `
{
  "components": {
    "schemas": {
      "UpdateUserProfileDto": {
        "properties": {
          "avatar": {
            "description": "头像URL",
            "examples": [
              "https://cdn.example.com/avatars/user123.jpg",
            ],
            "format": "uri",
            "type": "string",
          },
          "displayName": {
            "description": "用户显示名称",
            "examples": [
              "John Doe",
            ],
            "maxLength": 50,
            "minLength": 2,
            "type": "string",
          },
          "email": {
            "description": "用户邮箱地址",
            "examples": [
              "john.doe@example.com",
            ],
            "format": "email",
            "type": "string",
          },
        },
        "required": [
          "email",
        ],
        "type": "object",
      },
      "UpdateUserProfileVo": {
        "properties": {
          "data": {
            "description": "返回数据",
            "properties": {
              "userId": {
                "description": "用户ID",
                "examples": [
                  "123e4567-e89b-12d3-a456-426614174000",
                ],
                "format": "uuid",
                "type": "string",
              },
            },
            "type": "object",
          },
          "success": {
            "description": "是否成功",
            "examples": [
              true,
            ],
            "type": "boolean",
          },
        },
        "type": "object",
      },
      "UserNotFoundVo": {
        "properties": {
          "error": {
            "properties": {
              "code": {
                "description": "错误码",
                "examples": [
                  "USER_NOT_FOUND",
                ],
                "type": "string",
              },
              "message": {
                "description": "错误消息",
                "examples": [
                  "指定的用户不存在",
                ],
                "type": "string",
              },
            },
            "type": "object",
          },
          "success": {
            "description": "是否成功",
            "examples": [
              false,
            ],
            "type": "boolean",
          },
        },
        "type": "object",
      },
    },
  },
  "info": {
    "title": "",
    "version": "1.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/api/v1/users/{userId}/profile": {
      "put": {
        "deprecated": true,
        "description": "更新指定用户的个人档案信息，包括基本信息和偏好设置。支持部分更新，只更新提供的字段。",
        "operationId": "updateUserProfile",
        "parameters": [
          {
            "description": "用户唯一标识符",
            "example": "123e4567-e89b-12d3-a456-426614174000",
            "in": "path",
            "name": "userId",
            "required": true,
            "schema": {
              "format": "uuid",
              "type": "string",
            },
          },
        ],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/UpdateUserProfileDto",
              },
            },
          },
          "description": "用户档案更新数据",
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/UpdateUserProfileVo",
                },
              },
            },
            "description": "用户档案更新成功",
          },
          "404": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/UserNotFoundVo",
                },
              },
            },
            "description": "用户不存在",
          },
        },
        "summary": "更新用户档案信息",
        "tags": [
          "users",
          "profile",
        ],
      },
    },
  },
  "tags": [
    {
      "name": "users",
    },
    {
      "name": "profile",
    },
  ],
}
`;
